# bmfote

./: .dockerignore  .gitignore  .npmignore  CLAUDE.md  Dockerfile  README.md  package.json  requirements.txt
autoresearch/: README.md  agent.py  cli_client.py  eval_common.py  eval_recall.py  judge.py  prepare.py  replay_code.py  runner.py
autoresearch/state/: drift.jsonl  experiments.jsonl  replay_results.jsonl
autoresearch/state/best/: code.json  moat.json  (+4 more)
client/: LICENSE  README.md  pyproject.toml
client/bmfote_client/: __init__.py  agent_sdk_adapter.py  anthropic_tools.py  client.py
client/cctx_client/: __init__.py  agent_sdk_adapter.py  anthropic_adapter.py  anthropic_tools.py  client.py
client/examples/: agent_sdk_demo.py  messages_api_demo.py
docs/: context-rot.md  definitions-prompt.md  n8n-proof.md  positioning.md
docs/linkedin/: post_a_context_archaeology.md  post_b_stale_data.md  post_c_cross_contamination.md
docs/reddit/: post_a_context_archaeology.md  post_b_stale_data.md  post_c_cross_contamination.md
engine/: db.py  dump_source.py  managed_agents.py  mcp_server.py  schema.sql  seed_turso.py  server.py  sync_conversations.py  sync_vault.py
engine/migrations/: 001_backfill_workspace.sql  002_definition_edits.sql  003_tracked_files.sql  004_definition_files.sql
hooks/: post-compaction-context.sh  pre-compaction-context.sh  stop-definitions.sh  stop-recap.sh  stop.sh  sync-transcript.sh
hooks/lib/: resolve-workspace.sh
installer/: deploy.sh  managed_agents.py  setup.sh
scripts/: migrate_workspace_id.py  test_workspace_isolation.py
(+79 files in other folders)
