[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cctx-client"
version = "0.1.0"
description = "Drop-in Python client for writing agent turns to a cctx memory server."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "cctx" }]
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
agent-sdk = ["claude-agent-sdk>=0.1.56"]

[project.urls]
Homepage = "https://github.com/bmfote/bmfote"

[tool.setuptools.packages.find]
include = ["cctx_client*"]
exclude = ["examples*"]
